2006-01-12  Nathaniel Smith  <njs@pobox.com>

	* sanity.cc (dump_buffer): Add forgotten newline.

2006-01-12  Nathaniel Smith  <njs@pobox.com>

	* roster.cc (make_roster_for_merge): Add more MM()'s.

2006-01-12  Matthew Gregan  <kinetik@orcon.net.nz>

	* contrib/{color-logs.{conf,sh},monotone.el}: Changes to handle
	renaming of --no-merges.
	* app_state.{cc,hh}, commands.cc, monotone.cc, options.hh: Make
	'log' default to not displaying merges.  Rename '--no-merges'
	option to '--merges'.

2006-01-11  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (diff): gettext'ify the "no changes" tag.

2006-01-11  Richard Levitte  <richard@levitte.org>

	* Makefile.am: Add contrib/usher as an extra program.  This works
	as a reminder that this program exists, and provides supported
	ways to build it.

	* contrib/usher.cc: Add a -m switch, to be able to specify the
	name or complete path of/to the monotone binary, in case there
	are several floating around on the system.

2006-01-11  Matt Johnston  <matt@ucc.asn.au>

	* Makefile.am: pch.hh should be included

2006-01-11  Nathaniel Smith  <njs@pobox.com>

	* sanity.hh (struct i18n_format): Make internationalized format
	strings and non-internationalized format strings type-distinct.
	(This hopefully sets up for fixing some of the charset mess later
	down the road.)
	(FL): New macro; like F but without the i18n glue.
	Use FL with L, and F/FP with everything else.
	* *.hh, *.cc: Adjust existing F/L/etc. usage accordingly.

2006-01-11  Nathaniel Smith  <njs@pobox.com>

	* HACKING: Add section listing all the single-character macros.

2006-01-11  Nathaniel Smith  <njs@pobox.com>

	* database.cc (fetch): Don't log all SQL unless requested by
	user.

2006-01-11  Nathaniel Smith  <njs@pobox.com>

	* po/Makevars (XGETTEXT_OPTIONS):
	* configure.ac: Tweak xgettext configuration to make intltool
	happier.

2006-01-11  Nathaniel Smith  <njs@pobox.com>

	* netsync.cc (process_confirm_cmd): Remove.
